# Urus

./: .clang-format  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SPEC.md  file.txt  temp_conv
.github/workflows/: test.yml
Diary/: COMPLAINTS.md
Diary/English/: notes-1-V0.1.md  notes-2-V0.2-1.md  notes-3-V0.2-2F.md
Diary/Indonesia/: catatan-1-V0.1.md  catatan-2-V0.2-1.md  catatan-3-V0.2-2F.md
compiler/: CMakeLists.txt  Makefile  ast.c  builtins.c  codegen.c  config.h.in  error.c  lexer.c  misc.c  parser.c  pkg.c  preprocess.c  sema.c  test.rus  test.urus  urusc  urusc.c  urusc.h  urusctok.h
compiler/cmake/: embed-string.cmake
compiler/include/: ast.h  common.h  linter.h  parser.h  preprocess.h  sema.h  token.h  urus_runtime.h  util.h
compiler/runtime/: urus_runtime.h
compiler/src/: ast.c  codegen.c  error.c  lexer.c  linter.c  main.c  parser.c  preprocess.c  sema.c  util.c
compiler/src/Sema/: builtins.c  scope.c  sema.c
compiler/stdlib/: fs.urus  graph.urus  json.urus  math.urus  os.urus  string.urus
documentation/: index.md
documentation/api-reference/: compiler-and-runtime-api.md
documentation/architecture/: compiler-architecture.md
documentation/changelog/: version-history.md
documentation/configuration/: compiler-configuration.md
documentation/development-guide/: contributor-guide.md
documentation/diagrams/: compiler-pipeline.md
documentation/installation/: README.md  installation-guide.md
documentation/overview/: overview.md
documentation/roadmap/: project-roadmap.md
documentation/security/: security-model.md
documentation/usage/: language-guide.md
examples/: collatz.urus  macro.urus  wasm_hello.urus
tests/: run_tests.cmake
tests/invalid/: unclosed_brace.urus  unknown_function_return_type.urus
tests/run/: async.urus  bitwise.urus  closures.urus  emit.urus  error_handling.urus  float_trailing_decimal.urus  generics.urus  integrer_out_of_range.urus  match_primitives.urus  numeric_separator.urus  runes.expected  runes.urus  stdlib_fs.urus  stdlib_graph.urus  stdlib_json.urus  stdlib_math.urus  stdlib_os.urus  stdlib_string.urus  struct_spread.expected  struct_spread.urus  testing.urus  tuples.expected  tuples.urus  unused_function.urus
tests/run/expected/: arithmetic.expected  arr_methods.expected  arrays.expected  bitwise.expected  const.expected  defer.expected  do_while.expected  emit.expected  foreach.expected  fstring_escape.expected  hex_oct_bin.expected  if_else.expected  increment_decrement.expected  loops.expected  match_primitives.expected  mut_params.expected  numeric_separator.expected  runes.expected  scientific_notation.expected  stdlib_graph.expected  str_methods.expected  strings.expected  testing.expected  tuples.expected  type_alias.expected  variables.expected
